test: add DisplayName descriptions to tests